--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="toDoApp">
   <head>
     <meta charset="utf-8">
     <title>My first Angular App</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="controllers.js"></script>
   </head>
   <body>
 
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>Hello {{yourName}}</h1>
+    <div ng-controller="ToDoController as controller">
+      {{controller.todo}}
     </div>
 
   </body>
