--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
 
-    <div ng-controller="ToDoController as controller">
-      {{controller.todo}}
+    <div ng-controller="ToDoController as ctrl">
+      <p ng-repeat="todo in ctrl.todos">
+        {{todo.task}}: {{todo.completed ? "completed" : "not completed"}}
+      </p>
+      <input type="text" ng-model="todoText">
+      <button ng-click="ctrl.addToDo(todoText);">Add a ToDo</button>
+      <button ng-click="ctrl.removeToDo();">Remove last ToDo</button>
     </div>
 
   </body>
