--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
+    <script type="text/javascript" src="ToDoFactory.js"></script>
   </head>
   <body>
 
     <div ng-controller="ToDoController as ctrl">
       <p ng-repeat="todo in ctrl.todos">
-        {{todo.task}}: {{todo.completed ? "completed" : "not completed"}}
+        {{todo.text}}: {{todo.completed ? "completed" : "not completed"}}
+        <span ng-click="todo.complete();">Complete</span>
       </p>
       <input type="text" ng-model="todoText">
       <button ng-click="ctrl.addToDo(todoText);">Add a ToDo</button>
